--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         </div>
 
         <div class="containt" id="containt">
-            <h1 id="city">Dhaka, BD</h1>
-            <h1 id="temp">25.99 C</h1>
-            <img id="icon" src="https://openweathermap.org/img/wn/50d@2x.png" alt="">
+            <h1 id="city"></h1>
+            <h1 id="temp"></h1>
+            <img id="icon" src="" alt="">
 
-            <h2 id="state">HAze</h2>
+            <h2 id="state"></h2>
 
             <div id="min_max_temp">
                 <div class="left">
-                    <span id="temp_max">25 C</span>
+                    <span id="temp_max"></span>
                 </div>
                 <div class="right">
-                    <span id="temp_min">25 C</span>
+                    <span id="temp_min"></span>
                 </div>
             </div>
 
@@ -46,14 +46,16 @@
 
             <div id="others">
                 <div class="left">
-                    <span id="humi">70%</span>
+                    <span id="humi"></span>
                 </div>
                 <div class="right">
-                    <span id="speed">50 KMh</span>
+                    <span id="speed"></span>
                 </div>
             </div>
         </div>
     </div>
+
+    <button class="theme_btn" id="theme_btn" type="button"><i class="fas fa-moon tog"></i></button>
 
     <script src="./main.js"></script>
 </body>
