--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper" id="wrapper">
         <div class="title">
-            <h1><i class="fas fa-sun"></i> Weather <sup>BETA</sup></h1>
+            <h1><i class="fas fa-sun"></i> Weather</h1>
         </div>
 
         <div class="search_bar">
